# aeternum

./: .gitmodules  Cargo.toml  Makefile  README.md  authors.toml  build.rs
.github/workflows/: innoscript.yaml  release.yaml
assets/: aeternum.desktop  aeternum.iss  config.template.toml
assets/models/: 4x-UltraSharp.param  sources.txt
src/: app.rs  error.rs  files.rs  image.rs  main.rs  notifier.rs  upscale.rs
src/config/: config.rs  mod.rs
src/config/structs/: keybinds.rs  misc.rs  mod.rs
src/windows/: about.rs
